fix: the delete button of the first component of the visible area is hidden(#66)

--- a/packages/generator/src/components/LeftSideBar/DragAtom/Item/index.module.css
+++ b/packages/generator/src/components/LeftSideBar/DragAtom/Item/index.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     user-select: none;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     &:hover {
       cursor: pointer;
     }
